# cddplus

./: .dir3_0.wmd  .gitignore  HISTORY.cdd  Integer.cc  Integer.h  Makefile  Makefile.2.7  Makefile.2.8  Makefile.am  README.cdd+  README.cdd+-077a.txt  Rational.cc  Rational.h  cdd+.gcc2.8.readme  cdd+.readme  cdd.C  cdd.error  cdd.h  cdd.readme  cddHISTORY  cddarith.C  cdddef.h  cddio.C  cddio_r.C  cddman.aux  cddman.bbl  cddman.blg  cddman.dvi  cddman.tex  cddpivot.C  cddrevs.C  cddrevs.h  cddrevs_r.C  cddtype.h  configure.ac  get_essential  gmp_init.cc  gmp_init.h  gmp_integer.cc  gmp_integer.h  (+9 more)
ext/: accuracy.ext  ccc4.adj  ccc4.ddl  ccc4.ext  ccc4.icd  ccc5.adj  ccc5.ddl  ccc5.ext  ccc5.icd  ccc6.ddl  ccc6.ext  ccc6.icd  ccc7.ext  ccp4.adj  ccp4.ddl  ccp4.ext  ccp4.icd  ccp5.adj  ccp5.ddl  ccp5.ext  ccp5.icd  ccp6.ddl  ccp6.ext  ccp6.icd  ccp7.ext  cross8.ddl  cross8.ext  cube8.ddl  cube8.ext  cyclic10-4.adj  cyclic10-4.ddl  cyclic10-4.ext  cyclic10-4.iad  cyclic10-4.icd  cyclic12-6.adj  cyclic12-6.ddl  cyclic12-6.ext  cyclic12-6.iad  cyclic12-6.icd  cyclic14-8.ext  (+64 more)
ine/: ccc4.ine  ccc5.ine  ccc6.ine  ccc7.ine  ccp4.ine  ccp5.adj  ccp5.ext  ccp5.icd  ccp5.ine  ccp6.ine  ccp7.ine  cross10.ine  cross12.ine  cross6.ine  cross8.ine  cube10.ine  cube12.ine  cube14.ine  cube16.ine  cube3.ine  cube6.ine  cube8.ine  cubocta.ine  cyclic10-4.ine  cyclic12-6.ine  cyclic14-8.ine  cyclic16-10.ine  ex1.ine  facettest.ine  facettest1.ine  facettest2.ine  findinter.ine  grcubocta.ine  hexocta.ine  infeas.ine  integralpoints.ine  irbox200-4.ine  kkd18_4.ine  kkd27_5.ine  kkd38_6.ine  (+24 more)
(+7 files in other folders)
